crates/plotnik-lib/tests/03-analyze/direct_recursion/no_input_right_recursion.txt
E = [(x) (E)]
==== diagnostics ====
error: infinite recursion: cycle consumes no input
 --> query.ptk:1:11
  |
1 | E = [(x) (E)]
  |           ^
  |           |
  |           references itself
  |
help: recursive references must consume input before recursing
==== symbols ====
E
  E (cycle)
